Fix a link error in an example

--- a/examples/midas/standalone/Makefile
+++ b/examples/midas/standalone/Makefile
@@ -15,6 +15,9 @@ CXXFLAGS      := -g -O -Wall -fexceptions -I../include -I$(ROMESYS)/include $(sh
 LIBS          := $(shell $(ROOTCONFIG) --libs) -Wl,-rpath=$(PWDST)/../obj -Wl,-rpath=$(ROMESYS)
 
 ROMELIB = -L../obj -lmidanalyzer
+ifeq ($(LIBROME), yes)
+ROMELIB += -L$(ROMESYS) -lrome
+endif
 
 all: analyzer
 
