--- a/Makefile.arch
+++ b/Makefile.arch
@@ -43,7 +43,7 @@ OSCXXFLAGS = -fno-common
 # this can be removed after ROOT group fix the problem related to
 # __builtin_va_list in _types.h
 # (this might cause side effect)
-CINTFLAGS = -D__builtin_va_list=va_list
+#CINTFLAGS = -D__builtin_va_list=va_list
 ifeq ($(shell expr $(MACOSX_MINOR) \> 7), 1)
 OSCFLAGS += -I/opt/X11/include
 endif
